--- a/template/src/views/partials/header.hbs
+++ b/template/src/views/partials/header.hbs
@@ -4,5 +4,5 @@
         <li><a href="/about.html">About</a></li>
         <li><a href="/contact.html">Contact</a></li>
     </ul>
-    <h3 class="text-muted"><%= siteName %></h3>
+    <h3 class="text-muted">test</h3>
 </div>
