Updates generator to use NPM package versions of Stylus plugins.

--- a/template/src/styles/_if_useStylus/settings.styl
+++ b/template/src/styles/_if_useStylus/settings.styl
@@ -170,5 +170,5 @@ $dropcap-bg ?= transparent
 // Spritesmith
 ////////////////////////////////////////////////////////////
 $use-spritesmith ?= true
-$sprite_map_file ?= '/images/sprite_map'
+$sprite_map_file ?= '/components/sprite_map'
 $sprite_img_file ?= '/images/sprite.png'
