--- a/template/src/styles/_if_useStylus/generic/index.styl
+++ b/template/src/styles/_if_useStylus/generic/index.styl
@@ -2,14 +2,14 @@ $use-jeet ?= true
 $use-typeplate ?= true
 $use-spritesmith ?= true
 
-@import 'axis-css-adapter'
-@import 'rupture-adapter'
+@import 'axis-css-adapter/axis'
+@import 'rupture-adapter/rupture'
 if $use-jeet
-  @import 'jeet-adapter'
+  @import 'jeet-adapter/jeet'
 if $use-typeplate
-  @import 'typeplate-stylus'
+  @import 'typeplate-stylus/typeplate'
 if $use-spritesmith
-  @import 'spritesmith-stylus'
+  @import 'spritesmith-stylus/spritesmith'
 
 establish-baseline('normalize')
 unless $use-jeet
