--- a/template/src/views/layouts/base_layout.hbs
+++ b/template/src/views/layouts/base_layout.hbs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css({.tmp,src}) styles/main.css -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!-- endbuild -->
 </head>
 <body>
